feat : /auth/otp/verify - /auth/register/patient - /auth/register/medecin - /auth/login - /auth/me
