# controllers/AuthController.js
@@ -1,19 +1,25 @@
 const express = require('express');
 const router = express.Router();
 
-// Import des routes d'authentification
 const otpSendRoute = require('../routes/auth/otp-send');
+const otpVerifyRoute = require('../routes/auth/otp-verify');
+const registerPatientRoute = require('../routes/auth/register-patient');
+const registerMedecinRoute = require('../routes/auth/register-medecin')
+const loginRoute = require('../routes/auth/login');
+const meRoute = require('../routes/auth/me');
 
 // Organisation des routes OTP
 router.use('/otp/send', otpSendRoute);
+router.use('/otp/verify', otpVerifyRoute);
 
-// TODO: Ajouter les autres routes auth
-// const otpVerifyRoute = require('../routes/auth/otp-verify');
-// const loginRoute = require('../routes/auth/login');
-// const registerRoute = require('../routes/auth/register');
-// 
-// router.use('/otp/verify', otpVerifyRoute);
-// router.use('/login', loginRoute);
-// router.use('/register', registerRoute);
+// Routes d'inscription
+router.use('/register/patient', registerPatientRoute);
+router.use('/register/medecin', registerMedecinRoute);
+
+// Route de connexion
+router.use('/login', loginRoute);
+// Route pour obtenir les informations de l'utilisateur connecté
+router.use('/me', meRoute);
+
 
 module.exports = router;
